--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -40807,6 +40807,9 @@
         }
       }
     },
+    "Customize Dashboard" : {
+
+    },
     "Dashboard" : {
       "comment" : "Tab title, max character count is 14",
       "localizations" : {
@@ -81191,6 +81194,9 @@
           }
         }
       }
+    },
+    "New Mobile Dashboard" : {
+
     },
     "Next 7 Days" : {
       "extractionState" : "manual",
