--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -20999,6 +20999,9 @@
         }
       }
     },
+    "Announcements (%lld)" : {
+
+    },
     "Anxiety gets louder at night — don't believe all its noise." : {
 
     },
@@ -41070,6 +41073,9 @@
         }
       }
     },
+    "Date" : {
+
+    },
     "Days Before" : {
       "localizations" : {
         "ar" : {
@@ -59610,6 +59616,9 @@
         }
       }
     },
+    "Global Announcement" : {
+
+    },
     "Go to App Store" : {
       "comment" : "Action on an alert",
       "extractionState" : "manual",
@@ -67161,6 +67170,9 @@
           }
         }
       }
+    },
+    "Information" : {
+
     },
     "Instructions" : {
       "localizations" : {
@@ -75525,6 +75537,9 @@
           }
         }
       }
+    },
+    "Message" : {
+
     },
     "Message everyone separately, or add everyone to a group conversation?" : {
       "extractionState" : "manual",
@@ -99158,6 +99173,9 @@
 
     },
     "Progress, not perfection. You're doing great." : {
+
+    },
+    "Question" : {
 
     },
     "Questions:" : {
