Add tap action to offline sync widget.

--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -112283,6 +112283,9 @@
         }
       }
     },
+    "Show sync details" : {
+
+    },
     "Showing up matters more than you know." : {
 
     },
