--- a/Student/Student/Localizable.xcstrings
+++ b/Student/Student/Localizable.xcstrings
@@ -40819,6 +40819,9 @@
     "Customize Course" : {
 
     },
+    "Customize Dashboard" : {
+
+    },
     "Dashboard" : {
       "comment" : "Tab title, max character count is 14",
       "localizations" : {
@@ -81221,6 +81224,9 @@
           }
         }
       }
+    },
+    "New Mobile Dashboard" : {
+
     },
     "Next 7 Days" : {
       "extractionState" : "manual",
